--- a/containers/app/Dockerfile
+++ b/containers/app/Dockerfile
@@ -1,6 +1,7 @@
-FROM node:alpine
+FROM node:10-alpine
 WORKDIR /usr/src/vuttr
 COPY package*.json ./
 RUN npm install
 COPY . .
 EXPOSE 8080
+CMD ["npm","start"]
